// Works with Gradle 5.7 and Java 12

// To run this do:
// ./gradlew run

// To build a distribution zip:
// ./gradlew distZip

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id 'org.beryx.jlink' version '2.21.1'
}

sourceCompatibility = 11
targetCompatibility = 11

version = '0.0.1'
group = 'ehu.isad'

java {
    modularity.inferModulePath.set(true)
}

application {
    mainModule = 'javafx' // name defined in module-info.java
    mainClass = 'ehu.isad.Main'
}



// ext.moduleName = 'gradlejavafxhelloworld'
mainClassName = "$moduleName/ehu.isad.Main"


javafx {
    version = "12"
    modules = [ 'javafx.graphics', 'javafx.fxml', 'javafx.controls']
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    compile group: 'commons-io', name: 'commons-io', version: '2.6'


//    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
//    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'

}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
}

dependencies {
    compile 'org.mongodb:mongo-java-driver:3.8.1'
}

repositories {
    mavenCentral()
}

def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED', '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]

jlink {

    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'whatwebfx'
        jvmArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
                    '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
    }

    jpackage {
        if (javafx.getPlatform().name() == "OSX") {
            installerType = "dmg"
            jpackageHome = "/Users/<user>/Downloads/jdk-13.jdk/Contents/Home"
        } else if (javafx.getPlatform().name() == "WINDOWS") {
            installerType = "exe"
            jpackageHome = "C:\\Users\\Alonso\\.jdks\\openjdk-14.0.2"
            installerOptions = ['--win-menu', '--win-shortcut', '--win-dir-chooser']
        }
    }
}
run {
    inputs.property('moduleName', moduleName)
    doFirst {
        jvmArgs = jvmArgs.plus(newArgs)
        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
                                '--module', "$mainClassName",
        ])
        classpath = files()
    }
}
